kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server-deployment
  labels:
    app: express-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: express-server
    spec:
      containers:
      - name: express-server
        image: docker.io/bhnhox/express-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 20
