kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server-service
spec:
  selector:
    app: express-server
  type: NodePort
  ports:
  - port: 80
    targetPort: 3001
    nodePort: 30081
